route card to cards
